argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: netbox
    managedBy: argocd
    managementCodeGroup: chrismlee42-dev
    managementCodeProject: netbox-config
  name: netbox
