argocd/caching-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caching-redis
spec:
  replicas: 1
  selector:
    matchExpressions:
      - key: app.kubernetes.io/component
        operator: Exists
    matchLabels:
      app.kubernetes.io/component: caching-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/component: caching-redis
    spec:
      containers:
      - name: redis
        image: redis:8.0.3-bookworm
        ports:
        - containerPort: 6379
