argocd/caching-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caching-redis
spec:
  selector:
    app.kubernetes.io/component: caching-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
