argocd/netbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: netbox
  sessionAffinity: None
  type: ClusterIP
