argocd/tasks-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasks-redis
spec:
  selector:
    app.kubernetes.io/component: tasks-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
