argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: netbox
    managedBy: argocd
    managementCodeGroup: chrismlee42
    managementCodeProject: netbox-config
  name: netbox
  namespace: netbox
spec:
  hostnames:
    - netbox.service.clee.private.morphacy.net
    - netbox.service.chris-pc.clee.private.morphacy.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      namespace: default
      port: 443
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: netbox
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
